ingress/deployement-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: node:18-alpine3.15
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: http-server
        command: [sh, -c, "node /opt/server/index.js"]
        volumeMounts:
          - mountPath: /opt/server
            name: server
      volumes:
        - name: server
          configMap:
            name: setup-server
